--- a/PFD Challenge 1/Views/FundTransfer/Confirmation.cshtml
+++ b/PFD Challenge 1/Views/FundTransfer/Confirmation.cshtml
@@ -4,7 +4,7 @@
 
 @section css{
     @*Add specific css script here*@
-    <link rel="stylesheet" href="~/css/futuretransfer.css" />
+    <link rel="stylesheet" href="~/css/confirmation.css" />
 }
 
 @model PFD_Challenge_1.Models.TransferConfirmation
@@ -88,3 +88,16 @@
         </div>
     </div>
 </div>
+
+<div class="alert" style="text-align:center">
+    <div>digibank Alert</div>
+    <br /><strong>Insufficient balance in your account.</strong>
+    <strong>Please enter a lower amount and try again.</strong>
+    <br /><div class="closebtn" style="width:auto;display: inline-block;">OK</div>
+</div>
+
+
+@section scripts{
+    @*Add JavaScripts specifically for this view here*@
+    <script src="~/js/confirmation.js"></script>
+}
