--- a/PFD Challenge 1/wwwroot/css/transactionhistory.css
+++ b/PFD Challenge 1/wwwroot/css/transactionhistory.css
@@ -25,3 +25,33 @@
 h1, h6{
     color:white;
 }
+
+/*'Funds received' and 'Funds sent' Button CSS*/
+#received, #sent {
+    display: inline-block;
+    box-sizing: border-box;
+    background-color: #DDBE93;
+    border-radius: 0.6em;
+    color: white;
+    cursor: pointer;
+    /*display: flex;*/
+    align-self: center;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1;
+    margin: 20px;
+    padding: 1.2em 2.8em;
+    text-decoration: none;
+    text-align: center;
+    text-transform: uppercase;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    border-color: #DDBE93;
+}
+
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 200px;
+}
