--- a/PFD Challenge 1/Views/Home/Index.cshtml
+++ b/PFD Challenge 1/Views/Home/Index.cshtml
@@ -2,14 +2,50 @@
 @{
     ViewData["Title"] = "Login";
 }
+@section css{
+    @*Add specific css script here*@
+    <link rel="stylesheet" href="~/css/login.css" />
+}
 
-<div class="container-fluid">
-    <div class="row align-items-center">
-        <div class="col" style="margin:50px">
-            @if (Context.Session.GetString("NRIC")== null)
-            {
-            <button id="activateButton" data-toggle="modal" data-target="#facialRecog">Login via Face Recognition</button>
-            }                
+<div class="container" id="mainContainer2">
+    <div class="first-container">
+        <div style="text-align: center; margin-top:5%">
+            <img id="imgLogo" src="~/images/Login.jpeg"
+                 style="width: 70%" />
+            <h3  style="margin-top:2%">Welcome back!</h3>
+            <h1 style="margin-top:2%">Please, Log In.</h1>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col text-center">
+            <div class="container">
+                <div class="form-group" style="color: white">
+                    <label for="balance">Username</label>
+                </div>
+                <div><input class="form-group" style="color: black"></div>
+                <div class="form-group" style="color: white">
+                    <label for="balance">Password</label>
+                </div>
+                <div><input class="form-group" style="color: black"></div>
+            </div>
+            <!-- Login Button -->
+            <div class="every" style="padding-top:15px;padding-right:50px;padding-left:50px; display: inline-block;">
+                <div class="btn">@Html.ActionLink("Login", "FundTransfer", "FundTransfer")</div>
+            </div>
+            <div class="container-fluid">
+                <div class="row align-items-center">
+                    <div class="col" style="margin:50px">
+                        <div class="every" style="padding-top:15px;padding-right:50px;padding-left:50px; display: inline-block;">
+                            @if (Context.Session.GetString("NRIC") == null)
+                            {
+                                <button id="activateButton" data-toggle="modal" data-target="#facialRecog">Login via Face Recognition</button>
+                            }
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
@@ -17,7 +53,7 @@
 <!--This is for the modal(pop-up) for webcam facial detection-->
 <div class="modal fade" id="facialRecog" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content"style="height:auto;width:auto;">
+        <div class="modal-content" style="height:auto;width:auto;">
             <div class="container">
                 <div>Please look into the camera and wait.</div>
                 <div id="livecam" class="cam">
@@ -30,6 +66,7 @@
     </div>
 </div>
 @section Scripts{
+    <script src="~/js/login.js"></script>
     <script src="https://unpkg.com/@@tensorflow/tfjs-core@2.4.0/dist/tf-core.js"></script>
     <script src="https://unpkg.com/@@tensorflow/tfjs-converter@2.4.0/dist/tf-converter.js"></script>
     <!-- You must explicitly require a TF.js backend if you're not using the tfjs union bundle. -->
