Add telegram notification for transaction.

--- a/PFD Challenge 1/Views/Telegram/Index.cshtml
+++ b/PFD Challenge 1/Views/Telegram/Index.cshtml
@@ -9,5 +9,5 @@
     <div>1) Scan the QR code above</div>
     <div>2) Key in your NRIC</div>
     <div>3) Click confirm when you are done</div>
-    <button action="RegisterUser">Confirm</button>
+    <div>@Html.ActionLink("Register User", "RegisterUser","Telegram")</div>
 </div>
