--- a/PFD Challenge 1/wwwroot/css/futuretransfer.css
+++ b/PFD Challenge 1/wwwroot/css/futuretransfer.css
@@ -54,9 +54,18 @@
         outline: 0;
     }
 
-h1, h6{
-    color:white;
+h1, h2, h3, h4, h5, h6 {
+    color: white;
 }
+
+h1 {
+    font-size: 55px;
+}
+
+h2 {
+    font-size: 30px;
+}
+
 
 /*Input CSS*/
 .input {
@@ -78,6 +87,8 @@ h1, h6{
     text-transform: uppercase;
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
+    color: white;
+    font-size: 20px;
 }
 
 
