--- a/PFD Challenge 1/Views/FundTransfer/Confirmation.cshtml
+++ b/PFD Challenge 1/Views/FundTransfer/Confirmation.cshtml
@@ -13,7 +13,7 @@
     <div class="first-container">
         <div style="text-align: center; margin-top:2%">
             <img id="imgLogo" src="~/images/FutureTransferReview(4).jpg"
-                 style="width: 33%" />
+                 style="width: 38%" />
             <h1 style="margin-top:2%">Review Transfer</h1>
         </div>
     </div>
@@ -27,20 +27,20 @@
                     <div class="form-group form-check-inline" style="padding-top: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
                         <div class="form-group" style="color: white">
                             <div class="to" style="padding-top: 2px;">
-                                <div class="to" style="background-color: #AA1945">To</div>
+                                <div class="to" style="background-color: #AA1945; font-size: 25px;">To</div>
                             </div>
                             <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
-                                <input asp-for="Recipient" type="text" readonly class="form-control" id="to" style="background-color: #E7625F; border: transparent; color: white; text-align: center;">
+                                <input asp-for="Recipient" type="text" readonly class="form-control" id="to" style="background-color: #E7625F; border: transparent; color: white; text-align: center; font-size: 30px;">
                             </div>
                         </div>
                     </div>
                     <div class="form-group form-check-inline" style="padding-top: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
                         <div class="form-group" style="color: white">
                             <div class="transferamount" style="padding-top: 2px;">
-                                <div class="transferamount" style="background-color: #AA1945">Transfer Amount</div>
+                                <div class="transferamount" style="background-color: #AA1945; font-size: 25px;">Transfer Amount</div>
                             </div>
                             <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
-                                <input asp-for="TransferAmount" type="text" readonly class="form-control" id="transfer" style="background-color: #E7625F; border: transparent; color: white; text-align: center;">
+                                <input asp-for="TransferAmount" type="text" readonly class="form-control" id="transfer" style="background-color: #E7625F; border: transparent; color: white; text-align: center; font-size: 30px;">
                             </div>
                         </div>
                     </div>
@@ -51,13 +51,13 @@
                     @if (Model.FutureTransfer == "false")
                     {
                         <div id="futureTime">
-                            <div class="form-group form-check-inline" style="padding-top: 0px; padding-right: 180px; padding-left: 180px; display: inline-block;">
+                            <div class="form-group form-check-inline" style="padding-top: 0px; padding-right: 360px; padding-left: 180px; display: inline-block;">
                                 <div class="form-group" style="color: white">
                                     <div class="plannedtimeoftransfer" style="padding-top: 2px;">
-                                        <div class="plannedtimeoftransfer" style="background-color: #AA1945">Planned time of transfer</div>
+                                        <div class="plannedtimeoftransfer" style="background-color: #AA1945; font-size: 25px;">Planned time of transfer</div>
                                     </div>
-                                    <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 180px; padding-left: 180px; display: inline-block;">
-                                        <div>Immediate</div>
+                                    <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 230px; padding-left: 230px; display: inline-block; font-size: 30px;">
+                                        <div style="padding-top: 10px; padding-bottom: 10px;">Immediate</div>
                                     </div>
                                 </div>
                             </div>
@@ -66,13 +66,15 @@
                     else
                     {
                         <div id="futureTime">
-                            <div class="form-group form-check-inline" style="padding-top: 0px; padding-right: 170px; padding-left: 170px; display: inline-block;">
+                            <div class="form-group form-check-inline" style="padding-top: 0px; padding-right: 360px; padding-left: 180px; display: inline-block;">
                                 <div class="form-group" style="color: white">
                                     <div class="plannedtimeoftransfer" style="padding-top: 2px;">
-                                        <div class="plannedtimeoftransfer" style="background-color: #AA1945">Planned time of transfer</div>
+                                        <div class="plannedtimeoftransfer" style="background-color: #AA1945; font-size: 25px;">Planned time of transfer</div>
                                     </div>
-                                    <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 170px; padding-left: 170px; display: inline-block;">
-                                        <input asp-for="TimeTransfer" readonly />
+                                    <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 220px; padding-left: 240px; display: inline-block;">
+                                        <div style="padding-top: 10px; padding-bottom: 10px;">
+                                            <input asp-for="TimeTransfer" readonly />
+                                        </div>
                                     </div>
                                 </div>
                             </div>
