--- a/PFD Challenge 1/Views/FundTransfer/FundTransferReview.cshtml
+++ b/PFD Challenge 1/Views/FundTransfer/FundTransferReview.cshtml
@@ -13,7 +13,7 @@
     <div class="first-container">
         <div style="text-align: center; margin-top:2%">
             <img id="imgLogo" src="~/images/FutureTransferReview(4).jpg"
-                 style="width: 33%" />
+                 style="width: 45%" />
             <h1 style="margin-top:2%">Transfer</h1>
         </div>
     </div>
@@ -27,7 +27,7 @@
                     <div class="form-group form-check-inline" style="padding-top: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
                         <div class="form-group" style="color: white">
                             <div class="to" style="padding-top: 2px;">
-                                <div class="to" style="background-color: #AA1945">To</div>
+                                <div class="to" style="background-color: #AA1945;font-size:25px;">To</div>
                             </div>
                             <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
                                 <input asp-for="Recipient" type="text" class="form-control" id="to" style="background-color: #E7625F; border: transparent; color: white; text-align: center; font-size:30px;">
@@ -37,7 +37,7 @@
                     <div class="form-group form-check-inline" style="padding-top: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
                         <div class="form-group" style="color: white">
                             <div class="accountbalance" style="padding-top: 2px;">
-                                <div class="accountbalance" style="background-color: #AA1945">Account Balance</div>
+                                <div class="accountbalance" style="background-color: #AA1945; font-size: 25px;">Account Balance</div>
                             </div>
                             <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 60px; padding-left: 60px; display: inline-block;">
                                 <input readonly asp-for="Balance" class="form-control" id="accountbalance" style="padding-left: 80px; padding-right: 70px; background-color: #E7625F; font-size: 30px; text-align:center;" />
@@ -47,7 +47,7 @@
                     <div class="form-group form-check-inline" style="padding-top: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
                         <div class="form-group" style="color: white">
                             <div class="transferamount" style="padding-top: 2px;">
-                                <div class="transferamount" style="background-color: #AA1945">Transfer Amount</div>
+                                <div class="transferamount" style="background-color: #AA1945; font-size: 25px;">Transfer Amount</div>
                             </div>
                             <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
                                 <input asp-for="TransferAmount" type="text" class="form-control" id="transfer" style="background-color: #E7625F; border: transparent; color: white; text-align: center; font-size: 30px;">
@@ -57,7 +57,7 @@
                     <div class="form-group form-check-inline" style="padding-top: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
                         <div class="form-group" style="color: white">
                             <div class="date" style="padding-top: 2px; padding-left:10px">
-                                <div class="date" style="background-color: #AA1945">Date</div>
+                                <div class="date" style="background-color: #AA1945; font-size: 25px;">Date</div>
                             </div>
                             <div tyle="padding-top: 20px;">
                                 <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 70px; padding-left: 70px; display: inline-block;">
@@ -93,11 +93,13 @@
                         <div class="form-group form-check-inline" style="padding-top: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
                             <div class="form-group" style="color: white">
                                 <div class="plannedtimeoftransfer" style="padding-top: 2px;">
-                                    <div class="plannedtimeoftransfer" style="background-color: #AA1945">Planned time of transfer</div>
+                                    <div class="plannedtimeoftransfer" style="background-color: #AA1945; font-size: 25px;">Planned time of transfer</div>
                                 </div>
-                                <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 140px; padding-left: 140px; display: inline-block;">
-                                    <input asp-for="TimeTransfer" /><br />
-                                    <span asp-validation-for="TimeTransfer" class="text-danger small"></span>
+                                <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 220px; padding-left: 220px; display: inline-block;">
+                                    <div style="padding-top: 10px; padding-bottom: 10px;">
+                                        <input asp-for="TimeTransfer" /><br />
+                                        <span asp-validation-for="TimeTransfer" class="text-danger small"></span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
