--- a/PFD Challenge 1/Views/Home/Index.cshtml
+++ b/PFD Challenge 1/Views/Home/Index.cshtml
@@ -37,18 +37,7 @@
             <div class="every" style="padding-top:20px;padding-right:250px;padding-left:250px; padding-bottom:0px; display: inline-block;">
                 <div class="btn" id="login">@Html.ActionLink("Login", "FundTransfer", "FundTransfer")</div>
             </div>
-            <div class="container-fluid">
-                <div class="row align-items-center">
-                    <div class="col" style="margin:50px">
-                        <div class="every" style="padding-top:0px;padding-right:50px;padding-left:50px; display: inline-block;">
-                            @if (Context.Session.GetString("NRIC") == null)
-                            {
-                                <button id="activateButton" data-toggle="modal" data-target="#facialRecog">Login via Face Recognition</button>
-                            }
-                        </div>
-                    </div>
-                </div>
-            </div>
+
         </div>
     </div>
 </div>
@@ -80,21 +69,11 @@
     <script>
         setTimeout(myFunction, 3000); //function to change the window location to homepage
     </script>
-    <script src="https://unpkg.com/@@tensorflow/tfjs-core@2.4.0/dist/tf-core.js"></script>
-    <script src="https://unpkg.com/@@tensorflow/tfjs-converter@2.4.0/dist/tf-converter.js"></script>
-    <!-- You must explicitly require a TF.js backend if you're not using the tfjs union bundle. -->
-    <script src="https://unpkg.com/@@tensorflow/tfjs-backend-webgl@2.4.0/dist/tf-backend-webgl.js"></script>
-    <!-- Require face-landmarks-detection itself. -->
-    <script src="https://unpkg.com/@@tensorflow-models/face-landmarks-detection@0.0.1/dist/face-landmarks-detection.js"></script>
-    <script src="~/js/ml.js"></script>
     <script>
         $(document).ready(function () {
             $("#add-update-msg").hide();
         })
-    function redirecting(totalsum) {
-    var url = '@Url.Action("faceLogin", "home", new { id = "__id__" })';
-    window.location.href = url.replace('__id__', totalsum);
-        } $("#login a").click(function (e) {
+        $("#login a").click(function (e) {
             $(".form").hide();
             $("#add-update-msg").show();
             setTimeout(function () {
