--- a/PFD Challenge 1/Views/Telegram/RegisterUser.cshtml
+++ b/PFD Challenge 1/Views/Telegram/RegisterUser.cshtml
@@ -1,6 +1,15 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-<div class="container">
-    <div>@ViewData["Message"]</div>
+<div class="container" id="mainContainer2">
+    <div class="first-container">
+        <div style="text-align: center; margin-top:2%">
+            <img id="imgLogo" src="~/images/Telegram.jpeg"
+                 style="width: 45%" />
+            <h1 style="margin-top:2%;margin-bottom:50px;color:white;">Notifications for Telegram</h1>
+        </div>
+    </div>
+</div>
+<div class="container" style="text-align:center">
+    <h2 style="color:white;">@ViewData["Message"]</h2>
 </div>
