--- a/PFD Challenge 1/Views/FundTransfer/Confirmation.cshtml
+++ b/PFD Challenge 1/Views/FundTransfer/Confirmation.cshtml
@@ -1,7 +1,7 @@
 ﻿@*
     View for Transaction Confirmation
 *@
-
+@using Microsoft.AspNetCore.Http;
 @section css{
     @*Add specific css script here*@
     <link rel="stylesheet" href="~/css/confirmation.css" />
@@ -27,20 +27,20 @@
                     <div class="form-group form-check-inline" style="padding-top: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
                         <div class="form-group" style="color: white">
                             <div class="to" style="padding-top: 2px;">
-                                <div class="to" style="background-color: #AA1945; font-size: 25px;">To</div>
+                                <div class="to" style="background-color: #AA1945; font-size: 20px;">To</div>
                             </div>
                             <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
-                                <input asp-for="Recipient" type="text" readonly class="form-control" id="to" style="background-color: #E7625F; border: transparent; color: white; text-align: center; font-size: 30px;">
+                                <input asp-for="Recipient" type="text" readonly class="form-control" id="to" style="background-color: #E7625F; border: transparent; color: white; text-align: center; font-size: 25px;">
                             </div>
                         </div>
                     </div>
                     <div class="form-group form-check-inline" style="padding-top: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
                         <div class="form-group" style="color: white">
                             <div class="transferamount" style="padding-top: 2px;">
-                                <div class="transferamount" style="background-color: #AA1945; font-size: 25px;">Transfer Amount</div>
+                                <div class="transferamount" style="background-color: #AA1945; font-size: 20px;">Transfer Amount</div>
                             </div>
                             <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 115px; padding-left: 115px; display: inline-block;">
-                                <input asp-for="TransferAmount" type="text" readonly class="form-control" id="transfer" style="background-color: #E7625F; border: transparent; color: white; text-align: center; font-size: 30px;">
+                                <input asp-for="TransferAmount" type="text" readonly class="form-control" id="transfer" style="background-color: #E7625F; border: transparent; color: white; text-align: center; font-size: 25px;">
                             </div>
                         </div>
                     </div>
@@ -67,13 +67,13 @@
                     {
                         <div id="futureTime">
                             <div class="form-group form-check-inline" style="padding-top: 0px; padding-right: 360px; padding-left: 180px; display: inline-block;">
-                                <div class="form-group" style="color: white">
+                                <div class="form-group" style="color: white; margin:auto auto auto 33px;">
                                     <div class="plannedtimeoftransfer" style="padding-top: 2px;">
-                                        <div class="plannedtimeoftransfer" style="background-color: #AA1945; font-size: 25px;">Planned time of transfer</div>
+                                        <div class="plannedtimeoftransfer" style="background-color: #AA1945; font-size: 20px;">Planned time of transfer</div>
                                     </div>
-                                    <div class="input" style="padding-top: 2px; padding-bottom: 0px; padding-right: 220px; padding-left: 240px; display: inline-block;">
+                                    <div style=" margin:auto;box-sizing: border-box; background-color: transparent; border: 2px solid white; border-radius: 0.6em; color: white; cursor: pointer; /*display: flex;*/ align-self: center; font-size: 1rem; font-weight: 400; line-height: 1; margin: 20px; padding: 1.2em 2.8em; text-decoration: none; text-align: center; text-transform: uppercase; font-family: 'Montserrat', sans-serif; font-weight: 700; padding-top: 2px; padding-bottom: 0px; padding-right: 130px; padding-left: 130px; display: inline-block;">
                                         <div style="padding-top: 10px; padding-bottom: 10px;">
-                                            <input asp-for="TimeTransfer" readonly />
+                                            <div style="width: 300px; font-size: 25px;">@String.Format("{0:G}", Context.Session.GetString("TimeOfTransfer"))</div>
                                         </div>
                                     </div>
                                 </div>
