--- a/PFD Challenge 1/Views/Home/Index.cshtml
+++ b/PFD Challenge 1/Views/Home/Index.cshtml
@@ -19,25 +19,26 @@
 <div class="container form">
     <div class="row">
         <div class="col text-center">
-            <div class="container">
-                <div class="form-group" style="color: white">
-                    <h2><label for="balance">Username</label></h2>
+            <form asp-action="Login">
+                <div class="container">
+                    <div class="form-group" style="color: white">
+                        <h2><label for="balance">Username</label></h2>
+                    </div>
+                    <div class="input" style="padding-top: 1px; padding-bottom: 0px; padding-right: 80px; padding-left: 80px; display: inline-block;">
+                        <input name ="Username"type="text" placeholder="Enter Username" class="form-control" id="to" style="background-color: #E7625F; border: transparent; color: white; text-align: center;" required>
+                    </div>
+                    <div class="form-group" style="color: white">
+                        <h2><label for="balance">Password</label></h2>
+                    </div>
+                    <div class="input" style="padding-top: 1px; padding-bottom: 0px; padding-right: 80px; padding-left: 80px; display: inline-block;">
+                        <input name ="password"type="text" placeholder="Enter Password" class="form-control" id="to" style="background-color: #E7625F; border: transparent; color: white; text-align: center;" required>
+                    </div>
                 </div>
-                <div class="input" style="padding-top: 1px; padding-bottom: 0px; padding-right: 80px; padding-left: 80px; display: inline-block;">
-                    <input type="text" placeholder="Enter Username" class="form-control" id="to" style="background-color: #E7625F; border: transparent; color: white; text-align: center;">
+                <!-- Login Button -->
+                <div class="every" style="padding-top:20px;padding-right:250px;padding-left:250px; padding-bottom:0px; display: inline-block;">
+                    <div class="btn" id="login"><button action="submit">Log In</button></div>
                 </div>
-                <div class="form-group" style="color: white">
-                    <h2><label for="balance">Password</label></h2>
-                </div>
-                <div class="input" style="padding-top: 1px; padding-bottom: 0px; padding-right: 80px; padding-left: 80px; display: inline-block;">
-                    <input type="text" placeholder="Enter Password" class="form-control" id="to" style="background-color: #E7625F; border: transparent; color: white; text-align: center;">
-                </div>
-            </div>
-            <!-- Login Button -->
-            <div class="every" style="padding-top:20px;padding-right:250px;padding-left:250px; padding-bottom:0px; display: inline-block;">
-                <div class="btn" id="login">@Html.ActionLink("Login", "FundTransfer", "FundTransfer")</div>
-            </div>
-
+            </form>
         </div>
     </div>
 </div>
