Update Telegram Notification

--- a/PFD Challenge 1/Views/Home/Index.cshtml
+++ b/PFD Challenge 1/Views/Home/Index.cshtml
@@ -31,7 +31,7 @@
                         <h2><label for="balance">Password</label></h2>
                     </div>
                     <div class="input" style="padding-top: 1px; padding-bottom: 0px; padding-right: 80px; padding-left: 80px; display: inline-block;">
-                        <input name ="password"type="text" placeholder="Enter Password" class="form-control" id="to" style="background-color: #E7625F; border: transparent; color: white; text-align: center;" required>
+                        <input name ="password"type="password" placeholder="Enter Password" class="form-control" id="to" style="background-color: #E7625F; border: transparent; color: white; text-align: center;" required>
                     </div>
                 </div>
                 <!-- Login Button -->
